--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Runner</string>
     <string-array name="filter_options">
-        <item>Date</item>
-        <item>Running Time</item>
-        <item>Distance</item>
-        <item>Average Speed</item>
-        <item>Calories Burned</item>
+        <item>Data</item>
+        <item>Tempo de Corrida</item>
+        <item>Distância</item>
+        <item>Velocidade Média</item>
+        <item>Calorias Queimadas</item>
     </string-array>
 </resources>
